Archive2/4c/8d728ba9294d96/output
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'void f(unsigned int)':
main.cpp:3:12: error: ISO C++ forbids variable length array 'a' [-Wvla]
     int a[i];
            ^
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:3:10: error: variable length arrays are a C99 feature [-Werror,-Wvla-extension]
    int a[i];
         ^
1 error generated.
